--- a/cursoADVweb/src/app/blog/pages/quemSomos/quemSomos.component.html
+++ b/cursoADVweb/src/app/blog/pages/quemSomos/quemSomos.component.html
@@ -222,6 +222,23 @@
             jurídica para o público infantojuvenil.
           </p>
         </div>
+
+        <div class="{{isMobile? 'w-100 pt-2 d-flex justify-content-center':'w-25'}}">
+          <div class="circle" style="height: 220px !important; width: 220px !important;">
+            <img src="../../../../assets/imgs/site proinf quem somos e cursos/joao.jpeg"
+            class="" height="300">
+          </div>
+        </div>
+
+        <div class="{{isMobile? 'w-100 pt-2':'w-75 pt-5'}}">
+          <h1><strong class="fontTitulo2 my-4">João Pedro Azevedo Fazoli</strong></h1>
+          <p class="formataParagrafos my-4 {{isMobile? 'pe-3':'pe-4'}} fs-5">
+            João Pedro é advogado formado pela USP e se especializou trabalhando em várias áreas jurídicas.
+            Nas diversas atuações, adquiriu conhecimentos interseccionais essenciais à sua compreensão do Direito como um emaranhado complexo a ser desatado.
+            A advocacia o ensinou, na prática, a defesa de direitos como um processo exaustivo, mas basilar da sociedade. Seu interese na defesa da Criança e do Adolescente permeou sua vida acadêmica,
+            o que atualmente o engajou a abraçar o ProInf como meio de aplicação das suas aprendizagens, experiências e paixão pelas questões infantojuvenis.
+          </p>
+        </div>
       </div>
     </div>
   </div>
