--- a/cursoADVweb/src/app/area-professor/alunos/visualizar-aluno/visualizar-aluno.component.scss
+++ b/cursoADVweb/src/app/area-professor/alunos/visualizar-aluno/visualizar-aluno.component.scss
@@ -22,6 +22,11 @@
   height: 815px;
 
   &::-webkit-scrollbar {
-    width: 0px !important;
+    width: 1em !important;
+  }
+
+  &::-webkit-scrollbar-thumb{
+    border-radius: 10px;
+    background: brown;
   }
 }
