--- a/cursoADVweb/src/app/area-professor/cursos/curso-editar-adicionar/curso-editar-adicionar.component.scss
+++ b/cursoADVweb/src/app/area-professor/cursos/curso-editar-adicionar/curso-editar-adicionar.component.scss
@@ -22,7 +22,12 @@
   height: 815px;
 
   &::-webkit-scrollbar {
-    width: 0px !important;
+    width: 1em !important;
+  }
+
+  &::-webkit-scrollbar-thumb{
+    border-radius: 10px;
+    background: brown;
   }
 }
 
