--- a/cursoADVweb/src/app/area-professor/tarefa/tarefa.component.html
+++ b/cursoADVweb/src/app/area-professor/tarefa/tarefa.component.html
@@ -8,5 +8,42 @@
     </div>
   </div>
 
-TAREFA
-</div>
+  <div *ngIf="!carregando">
+    <div class="col-12 d-flex">
+      <div class="col-6">
+        <span class="fs-6">TAREFA</span>
+      </div>
+    </div>
+    <div class="col-12 d-flex flex-wrap mt-2">
+      <div class="col-6 pe-2">
+        <mat-form-field class=" ">
+          <mat-label>Selecione uma aula</mat-label>
+          <mat-select [(value)]="videoSelecionado">
+            <mat-option [value]="item.id" *ngFor="let item of listaNomesVideos">{{ item.nome }}</mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+      <div class="col-6">
+        <mat-form-field class="">
+          <mat-label>Titulo da Tarefa</mat-label>
+          <input matInput [(ngModel)]="tituloTarefa">
+        </mat-form-field>
+      </div>
+      <div class="col-12">
+        <mat-form-field class="w-100">
+          <mat-label>Descrição</mat-label>
+          <textarea matInput [(ngModel)]="descricaoTarefa" rows="5" cols="40" placeholder="text" ></textarea>
+        </mat-form-field>
+      </div>
+      <div class="w-100 d-flex justify-content-end">
+        <button type="button" (click)="adicionarTarefa()" class="btn btn-primary rounded-pill text-light"><strong>ADICIONAR</strong></button>
+      </div>
+    </div>
+
+    <app-table
+      [lista]="listaTarefas"
+      [header]="header"
+      [options]="options"
+      [actions]="actions">
+    </app-table>
+  </div>
