--- a/cursoADVweb/src/app/area-professor/videos/videos-editar/videos-editar.component.html
+++ b/cursoADVweb/src/app/area-professor/videos/videos-editar/videos-editar.component.html
@@ -10,7 +10,7 @@
 <div class="m-4 d-flex flex-wrap scroll" *ngIf="!carregando">
   <div class="col-6 pe-2">
     <mat-form-field class=" ">
-      <mat-label>Vincule arquivos ao seu video</mat-label>
+      <mat-label>Defina um curso</mat-label>
       <mat-select [(value)]="cursoSelecionado">
         <mat-option (onSelectionChange)="pegarArquivosCurso(item.id)" [value]="item.id" *ngFor="let item of listaNomesCursos">{{ item.nome }}</mat-option>
       </mat-select>
@@ -26,7 +26,7 @@
       </div>
     </div>
     <mat-form-field class=" " *ngIf="!carregandoArquivos">
-      <mat-label>Escolha um curso</mat-label>
+      <mat-label>Vincule arquivos ao seu video</mat-label>
       <mat-select [formControl]="toppings" multiple>
         <mat-select-trigger>
           {{toppings.value?.[0] || ''}}
@@ -37,7 +37,7 @@
           }
         </mat-select-trigger>
         @for (topping of toppingList; track topping) {
-      <mat-option (onSelectionChange)="definirArquivos(topping)" [value]="topping">{{topping}}</mat-option>
+      <mat-option (click)="definirArquivos(topping)" [value]="topping">{{topping}}</mat-option>
       }
     </mat-select>
     </mat-form-field>
@@ -68,7 +68,7 @@
 
     </div>
     <div class="col-6 d-flex justify-content-end">
-      <button type="button" (click)="AdicionarVideo()" class="btn btn-primary rounded-pill text-light"><strong>ATUALIZAR</strong></button>
+      <button type="button" (click)="AtualizarrVideo()" class="btn btn-primary rounded-pill text-light"><strong>ATUALIZAR</strong></button>
 
     </div>
   </div>
