--- a/cursoADVweb/src/app/area-professor/videos/videos.component.html
+++ b/cursoADVweb/src/app/area-professor/videos/videos.component.html
@@ -18,7 +18,7 @@
     <div class="col-12 d-flex flex-wrap mt-2">
       <div class="col-6 pe-2">
         <mat-form-field class=" ">
-          <mat-label>Vincule arquivos ao seu video</mat-label>
+          <mat-label>Selecione um curso</mat-label>
           <mat-select [(value)]="cursoSelecionado">
             <mat-option (onSelectionChange)="pegarArquivosCurso(item.id)" [value]="item.id" *ngFor="let item of listaNomesCursos">{{ item.nome }}</mat-option>
           </mat-select>
@@ -34,7 +34,7 @@
           </div>
         </div>
         <mat-form-field class=" " *ngIf="!carregandoArquivos">
-          <mat-label>Escolha um curso</mat-label>
+          <mat-label>Vincule arquivos ao seu video</mat-label>
           <mat-select [formControl]="toppings" multiple>
             <mat-select-trigger>
               {{toppings.value?.[0] || ''}}
@@ -45,9 +45,9 @@
               }
             </mat-select-trigger>
             @for (topping of toppingList; track topping) {
-          <mat-option (onSelectionChange)="definirArquivos(topping)" [value]="topping">{{topping}}</mat-option>
-          }
-        </mat-select>
+              <mat-option (onSelectionChange)="definirArquivos(topping)" [value]="topping">{{topping}}</mat-option>
+            }
+          </mat-select>
         </mat-form-field>
       </div>
       <div class="col-6 pe-2">
