--- a/cursoADVweb/src/app/areaAluno/aula/aula.component.html
+++ b/cursoADVweb/src/app/areaAluno/aula/aula.component.html
@@ -1,5 +1,5 @@
 <app-sidebar-area-aluno></app-sidebar-area-aluno>
-<div class="col-12 pt-5 px-5 d-flex flex-wrap {{isMobile? '': 'defineTamanhoTela'}}">
+<div class="col-12 pt-5 d-flex flex-wrap {{isMobile? 'px-3': 'defineTamanhoTela px-5'}}">
   <!-- <div class="col-12">
     <h1 (click)="voltarInicio()" style="cursor: pointer;" > <strong> VOLTAR </strong> </h1>
   </div> -->
@@ -12,24 +12,49 @@
     </div>
   </div>
 
-  <div *ngIf="!carregando" class="{{tipoCurso != 'GRUPOESTUDOS'? 'col-8':'col-12'}}">
+  <!-- menu de aulas para mobile -->
+  <div  class="{{isMobile? 'col-12':'col-4'}}" *ngIf="curso.tipoCurso != 'GRUPOESTUDOS' && !carregando && isMobile">
+    <div class="w-100 m-2 modulos mt-5 pt-4 pb-3" s >
+      <h1 class="px-4"><b>Aulas</b></h1>
+          <hr class="w-100" />
+
+      <div *ngFor="let item of curso.listaVideos" class="col-12 d-flex px-4 {{item.aulaAtual?'aulaSelecionada':'aula'}}">
+        <div class="col-12 d-flex flex-wrap" (click)="selecionaCurso(item)">
+          <span class="material-icons fs-2 mt-2">
+            play_circle_filled
+            </span>
+          <!-- <video id="{{item.nome}}" width="60" height="50" controlsList=" nodownload nofullscreen noremoteplayback" src="https://centroproinf.com.br/assets/videos/{{item.nomeArquivo}}.mp4">
+            <source  type="video/mp4" >
+          </video> -->
+          <span class="mt-2 ms-3">
+            <h3>{{item.nome}}</h3>
+          </span>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <div *ngIf="!carregando" class="{{tipoCurso != 'GRUPOESTUDOS'? isMobile? 'col-12':'col-8':'col-12'}}">
     <video *ngIf="tipoCurso != 'GRUPOESTUDOS'" width="100%" height="515" controls controlsList="nodownload" src="https://centroproinf.com.br/video/{{ModuloSelecionado}}.mp4">
       <source  type="video/mp4" >
     </video>
     <h2 *ngIf="tipoCurso != 'GRUPOESTUDOS'" ><small><b>{{curso.titulo}}</b></small> | <small><b>{{nomeModulo}}</b></small></h2>
 
     <div class="d-flex flex-wrap col-12 mb-2" style="border-bottom: 1px solid #ee5c55;" >
-      <h2 (click)="descricaoSelecionado = true" class="{{descricaoSelecionado?'descricaoSelecionado':''}} pointer mb-0 pb-2">Descrição</h2>
-      <h2 (click)="descricaoSelecionado = false" class="{{descricaoSelecionado?'':'materiasisSelecionados'}} ms-4 pointer mb-0 pb-2">Materiais</h2>
+      <h2 (click)="descricaoSelecionado = true; tarefaSelecionada = false" class="{{descricaoSelecionado && !tarefaSelecionada?'descricaoSelecionado':''}} pointer mb-0 pb-2">Descrição</h2>
+      <h2 (click)="descricaoSelecionado = false; tarefaSelecionada = false" class="{{descricaoSelecionado || tarefaSelecionada?'':'materiasisSelecionados'}} ms-4 pointer mb-0 pb-2">Materiais</h2>
+      <!-- <h2 (click)="tarefaSelecionada = true" class="{{tarefaSelecionada?'tarefaSelecionada':''}} ms-4 pointer mb-0 pb-2">Tarefas</h2> -->
 
     </div>
-    <div class="mb-5 mt-2" *ngIf="descricaoSelecionado">
+    <div class="mb-5 mt-2" *ngIf="descricaoSelecionado && !tarefaSelecionada">
       <div *ngIf="tipoCurso == 'GRUPOESTUDOS'" class="w-100 justify-content-center d-flex my-4 ">
         <img  src="assets/imgs/ProInf_1.png" height="{{isMobile?'70':'250'}}">
       </div>
       <div class="fs-4 formataParagrafos" [innerHTML]="this.descricao"></div>
     </div>
-    <div class="mb-5 mt-2" *ngIf="!descricaoSelecionado">
+
+    <div class="mb-5 mt-2" *ngIf="!descricaoSelecionado && !tarefaSelecionada">
       <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
         <!-- This is the tree node template for leaf nodes -->
         <mat-tree-node *matTreeNodeDef="let node" matTreeNodePadding>
@@ -77,7 +102,35 @@
       </div>
     </div>
 
-    <!-- <div *ngIf="tipoCurso != 'GRUPOESTUDOS'" class="{{isMobile? 'col-12 p-4':'col-12'}}">
+    <!-- <div class="mb-5 mt-2" *ngIf="tarefaSelecionada">
+      <div class="fs-4 formataParagrafos" [innerHTML]="this.descricaoTarefa"></div>
+      <div class="col-12 d-flex justify-content-end px-4 pb-4" >
+        <input (change)="upload($event)" type="file" class="upload_btn" multiple/>
+
+        <div>
+          <button type="button"  class="btn btn-success rounded-pill">
+            ADICIONAR UM PDF COM A SUA RESPOSTA
+          </button>
+          <!-- <button type="button" (click)="Limpar()" class="btn btn-danger rounded-pill text-light ms-2">
+            <span class="material-icons mt-1">
+              delete
+            </span>
+          </button>
+        </div>
+        <div>
+
+        </div>
+      </div>
+      <div class="col-12 d-flex justify-content-end px-4 pb-4" >
+        <div *ngIf="tarefaResposta != null">
+          {{tarefaResposta.nome.toLocaleUpperCase()}}
+          <!-- {{tarefaResposta.nome.length > 20? tarefaResposta.nome.substring(0, 20).toLocaleUpperCase() + "..." : tarefaResposta.nome.toLocaleUpperCase()}}
+
+        </div>
+      </div>
+    </div> -->
+
+    <div *ngIf="tipoCurso != 'GRUPOESTUDOS'" class="col-12">
       <div style="border: #c3c1c1 solid 1px; border-radius: 10px;" class="col-12 d-flex flex-wrap justify-content-center pe-3 pt-3 pb-3">
         <div class="{{isMobile? 'col-12':'col-2'}} d-flex justify-content-center">
           <div class="circle" style="height: 80px !important; width: 80px !important;">
@@ -106,7 +159,7 @@
 
         <div class="col-12  d-flex mt-3">
           <div class="col-6 d-flex justify-content-start">
-            <div class="col-2" *ngIf="!isMobile">
+            <!-- <div class="col-2" *ngIf="!isMobile">
               <input (change)="upload($event)" type="file" class="upload_btn" multiple/>
 
               <button type="button"  class="btn rounded-pill">
@@ -118,8 +171,9 @@
               <div>
 
               </div>
-            </div>
-            <div class="col-2" (mouseleave)="selecionarEmoji = false">
+            </div> -->
+            <!-- <div class="col-2" (mouseleave)="selecionarEmoji = false">
+
               <button type="button" (click)="selecionarEmoji = !selecionarEmoji" class="btn rounded-pill">
                 <span class="material-icons {{isMobile?'fs-1':'fs-2'}}">
                   sentiment_satisfied_alt
@@ -131,21 +185,25 @@
                 (emojiClick)="addEmoji($event)" title="Pick your emoji…" emoji="point_up"></emoji-mart>
 
               </div>
-            </div>
+            </div> -->
 
 
           </div>
           <div class="col-6 d-flex justify-content-end">
-            <button type="button" (click)="Adicionar()" class="btn btn-warning rounded-pill text-light"><strong>POSTAR</strong></button>
-            <button type="button" (click)="Limpar()" class="btn btn-danger rounded-pill text-light ms-2">
-              <span class="material-icons mt-1">
-                delete
-              </span>
-            </button>
+            <div class="mt-2">
+              <button type="button" (click)="Adicionar()" class="btn btn-warning rounded-pill text-light"><strong>POSTAR</strong></button>
+            </div>
+            <div>
+              <button type="button" (click)="Limpar()" class="btn btn-danger rounded-pill text-light ms-2">
+                <span class="material-icons mt-1">
+                  delete
+                </span>
+              </button>
+            </div>
           </div>
         </div>
       </div>
-      <div class="col-12 mt-4">
+      <div class="col-12 mt-4 mb-4">
         <div class="w-100 mt-4 p-4 d-flex flex-wrap" *ngFor="let item of listaSearch" style="border: #c3c1c1 solid 1px; border-radius: 10px;">
           <div class="{{isMobile?'col-4':'col-1'}}" [style]="isMobile? '':'width: 13.333333% !important;'">
             <div class="circle" style="height: 80px !important; width: 80px !important;">
@@ -167,16 +225,20 @@
             <div style="color:#9c9a9a" class="col-12 pt-2 fs-6">
               {{item.conteudo}}
             </div>
+            <hr/>
+            <div style="color:#9c9a9a" class="col-12 pt-2 fs-6">
+              {{item.resposta}}
+            </div>
             <div>
               <img src="{{imagemSelecionada}}"   height="300"/>
             </div>
           </div>
-          <div class="col-12 pt-2">
+          <!-- <div class="col-12 pt-2">
             <span style="cursor:pointer ;" (click)="irParapublicacao()" class="fontTitulo2 fs-6" > Entrar na discussão... </span>
-          </div>
+          </div> -->
         </div>
 
-        <div class="col-12 d-flex justify-content-center mt-4 ">
+        <!-- <div class="col-12 d-flex justify-content-center mt-4 ">
           <mat-paginator #paginator class="w-100" (page)="handlePageEvent($event)"
             [length]="listaForuns.length"
             [pageSizeOptions]="[5, 10, 15]"
@@ -184,12 +246,13 @@
             showFirstLastButtons
           >
           </mat-paginator>
-        </div>
+        </div> -->
       </div>
-    </div> -->
+    </div>
   </div>
-  <div  class="col-4" *ngIf="curso.tipoCurso != 'GRUPOESTUDOS' && !carregando">
-    <div class="w-100 m-2 modulos mt-5 pt-4" style="height: 500px;" >
+  <!-- menu de aulas para pc -->
+  <div  class="{{isMobile? 'col-12':'col-4'}}" *ngIf="curso.tipoCurso != 'GRUPOESTUDOS' && !carregando && !isMobile">
+    <div class="w-100 m-2 modulos mt-5 pt-4 pb-3" s >
       <h1 class="px-4"><b>Aulas</b></h1>
           <hr class="w-100" />
 
