--- a/cursoADVweb/src/app/blog/pages/inicio/inicio.component.html
+++ b/cursoADVweb/src/app/blog/pages/inicio/inicio.component.html
@@ -58,7 +58,26 @@
       garantir não apenas a absorção do conteúdo necessário, mas também para desenvolver uma
       compreensão profunda e aplicada do material.</p>
   </div>
-  <div class="w-100 d-flex flex-wrap justify-content-center" style="padding-right: 4rem;">
+  <div *ngIf="isMobile">
+    <hr>
+    <div class=" defineFont {{isMobile? 'px-3':''}}">
+      <h3 class=""> <strong class="fontTitulo2">ESPECIALIZAÇÃO PROFUNDA EM DIREITO DA CRIANÇA</strong></h3>
+      <p class="fs-5 mt-4 formataParagrafos">{{texto.toLocaleUpperCase()}}</p>
+    </div>
+
+    <hr>
+    <div class=" defineFont {{isMobile? 'px-3':''}}">
+      <h3 class=""> <strong class="fontTitulo2">METODOLOGIA INOVADORA</strong></h3>
+      <p class="fs-5 mt-4 formataParagrafos">{{texto2.toLocaleUpperCase()}}</p>
+    </div>
+
+    <hr>
+    <div class=" defineFont {{isMobile? 'px-3':''}}">
+      <h3 class=""> <strong class="fontTitulo2">SUPORTE PERSONALIZADO E COMUNIDADE</strong></h3>
+      <p class="fs-5 mt-4 formataParagrafos">{{texto3.toLocaleUpperCase()}}</p>
+    </div>
+  </div>
+  <div *ngIf="!isMobile" class="w-100 d-flex flex-wrap justify-content-center" style="padding-right: 4rem;">
     <div class="d-flex justify-content-center {{isMobile? 'col-12':'col-4'}}" [style]="isMobile?'padding-bottom: 10rem;':''">
       <div class="flip-box">
         <div class="flip-box-inner">
